Session-API: override availableTranslations on POST
