# Session-API/components/WebServer/routes/api-docs/swagger/components/schemas/transcriber_profiles.json
@@ -101,6 +101,12 @@
             "required": ["candidate"]
           }
         },
+        "availableTranslations": {
+          "type": "array",
+          "items": {
+            "type": "string"
+          }
+        },
         "key": {
           "type": "string"
         },
